Fix: The Skill section is too narrow in mobile #4

--- a/css/modules/pages/about/about.skillsummary.scss
+++ b/css/modules/pages/about/about.skillsummary.scss
@@ -23,9 +23,9 @@
         background-color: $background-color;
         box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
         color: $text-color;
-        padding: 2rem;
+        padding: 1rem;
         max-width: 55rem;
-        width: 80%;
+        width: 90%;
         border-radius: 5px;
         margin: 3rem 0 5rem 0;
 
@@ -86,7 +86,7 @@
 
 .skill-details {
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-    padding: 1.5rem 1rem;
+    padding: 1rem .5rem;
     border-radius: 5px;
 
     .skill-details__skillname {
